--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,205 @@ html {
   position: relative;
   min-height: 100%; 
   }
+.bg-coffee{
+    background-color:#4f330f;
+}
+.bg-user{
+    background-color:#034c52;
+}
+.text-shadow{
+    text-shadow: 2px 2px 2px #000;
+}
+/*loader*/
+.loader {
+  width: 50px;
+  height: 50px;
+  background: transparent; 
+  /*margin: 30px auto 0 auto;*/
+  border: solid 5px #87d787;
+  border-top: solid 4px #147802;
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: 0 0 15px #33ef04;
+}
 
+
+.check {
+  /*width: 100%;*/
+  /*height: 100%;*/
+  align-items: center;
+  transform: translate3d(-4px,50px,0);
+  opacity: 0;
+  span:nth-child(1) {
+    display: block;
+    width: 13px;
+    height: 3px;
+    background-color: #fff;
+    transform: rotate(45deg) translate3d(22px, 6px, 0);
+  }
+  span:nth-child(2) {
+    display: block;
+    width: 22px;
+    height: 3px;
+    background-color: #fff;
+    transform: rotate(-45deg) translate3d(6px, 15px, 0);
+    transform-origin: 100%;
+  }
+}
+
+.loader.active {
+  animation: loading 3s ease-in-out; 
+  animation-fill-mode: forwards;
+}
+
+.check.active {
+  opacity: 1;
+  transform: translate3d(-4px,4px,0);
+  transition: all .5s cubic-bezier(.49, 1.74, .38, 1.74);
+  transition-delay: .2s;
+}
+
+@keyframes loading {
+  30% {
+    opacity:1; 
+  }
+  
+  85% {
+    opacity:1;
+    transform: rotate(1080deg);
+    border-color: #ff5;
+  }
+  100% {
+    opacity:1;
+    transform: rotate(1080deg);
+     border-color: #33ef04;
+  }
+}
+
+/*loader*/
+/*files show*/
+.btcd-f-input {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.btcd-f-input > div > input::-webkit-file-upload-button {
+    cursor: pointer;
+}
+
+.btcd-f-wrp {
+    cursor: pointer;
+}
+
+.btcd-f-wrp > small {
+    color: gray;
+}
+
+.btcd-f-wrp > button {
+    cursor: pointer;
+    background: #f3f3f3;
+    padding: 5px;
+    display: inline-block;
+    border-radius: 9px;
+    border: none;
+    margin-right: 8px;
+    height: 35px;
+}
+
+.btcd-f-wrp > button > img {
+    width: 24px;
+}
+
+.btcd-f-wrp > button > span,
+.btcd-f-wrp > span,
+.btcd-f-wrp > small {
+    vertical-align: super;
+}
+
+.btcd-f-input > .btcd-f-wrp > input {
+    z-index: 100;
+    width: 100%;
+    position: absolute;
+    opacity: 0;
+    left: 0;
+    height: 37px;
+    cursor: pointer;
+}
+
+.btcd-f-wrp:hover {
+    background: #fafafa;
+    border-radius: 10px;
+}
+
+.btcd-files > div {
+    display: flex;
+    align-items: center;
+    background: #f8f8f8;
+    border-radius: 10px;
+    margin-left: 30px;
+    width: 91%;
+    margin-top: 10px;
+    height: 40px;
+}
+
+.btcd-files > div > div {
+    display: inline-block;
+    width: 73%;
+}
+
+.btcd-files > div > div > small {
+    color: gray;
+}
+
+.btcd-files > div > img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+
+.btcd-files > div > div > span {
+    display: inline-block;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.btcd-files > div > button {
+    background: #e8e8e8;
+    border: none;
+    border-radius: 50px;
+    width: 25px;
+    height: 25px;
+    font-size: 20px;
+    margin-right: 6px;
+    padding: 0;
+}
+
+.btcd-files > div > button:hover {
+    background: #bbbbbb;
+}
+/*files show*/
 body {
   font-size: 0.9rem;
   background-color: #efefef;
   padding-bottom: 50px; 
 }
+.password-toggle-icon i {
+  font-size: 18px;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  color: #333;
+  
+}
 
+.password-toggle-icon i:hover {
+  color: #000;
+}
 
 .switch {
   position: relative;
@@ -322,8 +514,9 @@ a {
     z-index: 1; }
    
 .headerbar .headerbar-left .logo img {
-    max-width: 100px;
-    max-height: 30px;
+    max-width: 135px;
+    padding:2px;
+    max-height: 35px;
     width: auto;
     height: auto;
 }
