--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,13 @@ html {
   opacity: 0;
   box-shadow: 0 0 15px #33ef04;
 }
-
-
+.ldimg{
+    filter: drop-shadow(2px 12px 9px #666);
+}
+ .m-none{
+        
+        display:block;
+    }
 .check {
   /*width: 100%;*/
   /*height: 100%;*/
@@ -195,13 +200,26 @@ body {
 .password-toggle-icon i {
   font-size: 18px;
   position: absolute;
-  right: 15px;
+  right: 30px;
+  top: 163px;
+  color: #333;
+  z-index:9999999;
+  
+}
+
+.password-toggle-icon i:hover {
+  color: #000;
+}
+.passkey-toggle-icon i {
+  font-size: 18px;
+  position: absolute;
+  right: 17px;
   top: 10px;
   color: #333;
   
 }
 
-.password-toggle-icon i:hover {
+.passkey-toggle-icon i:hover {
   color: #000;
 }
 
@@ -575,6 +593,7 @@ a {
   position: absolute; }
 
 body.adminbody .main-sidebar.left {
+    background-color: #f8fafb;
   bottom: 0px;
   margin-bottom: 0px;
   margin-top: 0;
@@ -1037,6 +1056,10 @@ input[type=text] {
 }
 	
 @media (max-width: 480px) {
+    .m-none{
+        font-size:8px;
+        display:none;
+    }
 	.notif .noti-icon {
 		font-size: 18px;
 		padding: 0 10px;
